--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <video controls loop>
 
-    <source src="https://cdn.discordapp.com/attachments/779357523215253514/1004021127829528606/piston.webm"
+    <source src="https://cdn.discordapp.com/attachments/709311691569233972/1002823367776272426/coloride.webm?size=4096"
             type="video/webm">
 
     Sorry, your browser doesn't support embedded videos.
